# fundart-api

./: .env.example  .gitignore  Makefile  docker-compose.yaml  pyproject.toml
common/: pagination.py
common/auth/: jwt.py
config/: settings.py  urls.py
images/: admin.py  models.py  services.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_imagefavorite_created_at.py  0002_initial.py  0003_alter_image_image_alter_image_thumbnail.py  0003_alter_imagefavorite_created_at.py
orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
orders/management/commands/: insert_dummy_data.py
orders/migrations/: 0001_initial.py  0002_initial.py  0002_remove_coupon_id_alter_coupon_value.py  0003_coupon_uses.py  0003_order_shipping_cost.py
phone_cases/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
phone_cases/migrations/: 0001_initial.py  0002_alter_phonebrandreference_unique_together.py  0002_rename_case_scaffold_img_path_phonecase_case_scaffold_img.py
users/: admin.py  permissions.py  urls.py
users/migrations/: 0001_initial.py  0002_confirmationcode.py  0003_remove_address_department.py  0004_address_is_active.py
users/models/: __init__.py  addresses.py  confirmation_codes.py  users.py
users/serializers/: __init__.py  addresses.py  users.py
users/services/: users.py
users/views/: __init__.py  addresses.py  users.py
